turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:28: error: type mismatch;
 found   : Int
 required: Array[Int]
		case STOPP => 
                     ^Turmite:29: error: type mismatch;
 found   : Int
 required: Array[Int]
		case RIEN => avance()
                     ^Turmite:30: error: type mismatch;
 found   : Int
 required: Array[Int]
		case GAUCHE => gauche(); avance()
                     ^Turmite:31: error: type mismatch;
 found   : Int
 required: Array[Int]
		case DEMITOUR => gauche(); gauche()
                     ^Turmite:32: error: type mismatch;
 found   : Int
 required: Array[Int]
		case DROITE => droite(); avance()
                     ^